[package]
name = "p3d"
version = "0.3.1"
authors = ["mish"]
edition = "2018"

[build]
target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2", default-features = false }
cgmath = { version = "0.18", git = "https://github.com/3Dpass/cgmath", branch = "master", default-features = false }
tri-mesh = { version = "0.5.0", git = "https://github.com/3Dpass/tri-mesh", branch = "dev", default-features = false }
obj-rs = { version = "0.7", git = "https://github.com/3Dpass/obj-rs", branch = "dev", default-features = false }
ndarray = { version = "0.15", git = "https://github.com/3Dpass/ndarray", branch = "dev", default-features = false }
peroxide = { version = "0.30", git = "https://github.com/3Dpass/Peroxide", branch = "devel", default-features = false }
sha2 = { version = "0.9.3", default-features = false }
base16ct = { version = "0.1", default-features = false }
